--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Paypal Releases Nexus Repository</name>
-	      <url> http://3.90.248.20:8081/repository/mtn-releases/</url>
+	      <url> http://http://54.160.144.135:8081/repository/mtn-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Paypal Snapshot Nexus Repository </name>
-	      <url>http://3.90.248.20:8081/repository/mtn-snapshots/</url>
+	      <url>http://http://54.160.144.135:8081/repository/mtn-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
