--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Paypal Releases Nexus Repository</name>
-	      <url> http://3.87.112.84:8081/repository/gtbank-releases/</url>
+	      <url> http://52.71.247.80:8081/repository/gtbank-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Paypal Snapshot Nexus Repository </name>
-	      <url>http://3.87.112.84:8081/repository/gtbank-snapshots/</url>
+	      <url>http://52.71.247.80:8081/repository/gtbank-snapshots/
 	    </snapshotRepository>
 	    
 	</distributionManagement>
