--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:54.89.160.150:3000/</sonar.host.url>
+		<sonar.host.url>http://54.221.47.159:9000//</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>admin123</sonar.password>
+		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -96,13 +96,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Paypal Releases Nexus Repository</name>
-	      <url> http://52.71.247.80:8081/repository/gtbank-releases/</url>
+	      <url> http://34.228.64.119:8081/sidodat/repository/sidodat-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Paypal Snapshot Nexus Repository </name>
-	      <url>http://54.89.160.150:4000/content/repositories/sidodat-snapshot/</url>
+	      <name>Sidodat Snapshot Nexus Repository </name>
+	      <url>http://34.228.64.119:8081/sidodat/repository/sidodat-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
